--- a/web.iras3/public/modules/chart-page/chart-page.css
+++ b/web.iras3/public/modules/chart-page/chart-page.css
@@ -1,84 +1,6 @@
 /**
-* Chart Unit
+* Chart Page
 */
 .google-visualization-table-th {
 	font-size: smaller;
-}
-
-.btn:focus {
-	outline: none !important;
-}
-
-div.chart {
-	
-}
-
-.tile-info-title {
-	text-align: center;
-}
-
-.tile-info-title:HOVER {
-	cursor: pointer;
-}
-
-.category {
-	padding-left: 5px;
-	line-height: 35px;
-	font-weight: bold;
-	/*	background-color: #16499a !important;
-	color: white !important;*/
-}
-
-.category.active {
-	background-color: white !important;
-	color: black !important;
-}
-
-.category:hover {
-	cursor: pointer;
-	background-color: white !important;
-	color: #003e00 !important;
-}
-
-.tag {
-	padding-left: 5px;
-	font-weight: bold;
-	line-height: 35px;
-}
-
-.tag:hover {
-	cursor: pointer;
-	background-color: white !important;
-	color: #003e00 !important;
-}
-
-.tag.selected {
-	background-color: white !important;
-	color: black !important;
-}
-
-.selected-tag.active {
-	background-color: white !important;
-	color: black !important;
-}
-
-.selected-tag:hover {
-	cursor: pointer;
-	background-color: white !important;
-	color: #003e00 !important;
-}
-
-.chart-icon {
-	background-color: #16499a !important;
-	color: white;
-}
-
-.chart-icon:HOVER {
-	background-color: white !important;
-	color: #16499a !important;
-	cursor: pointer;
-}
-
-dl.filter-summary {
-	margin-bottom: 0px;
 }
